# N.O.V.A

./: .gitattributes  .gitignore  README.md  pyproject.toml  setup.bat
.github/workflows/: ci.yml
_bmad-output/: project-context.md
_bmad-output/brainstorming/: NOVA-BUILD-KIT.md  brainstorming-session-2026-04-13-0830.md
_bmad-output/implementation-artifacts/: 1-0-define-yaml-config-schemas-spike.md  1-1-project-scaffolding-and-package-setup.md  1-10-composition-root-and-cli-entrypoint.md  1-11-ci-quality-gate-automation.md  1-2-domain-exceptions-and-shared-types.md  1-3-event-bus-and-typed-event-definitions.md  1-4-sqlite-storage-engine.md  1-5-migration-runner-and-initial-schema.md  1-6-config-loader-and-immutable-novaconfig.md  1-7-capability-tier-state-machine.md  1-8-audit-logger.md  1-9-port-interfaces-and-shield-stub.md  2-1-setup-script-setup-bat.md  2-2-api-key-configuration.md  2-3-guided-mode-creation-wizard.md  2-4-briefing-card-state-a-initial-capture-and-setup-completion.md  2-5-api-key-update-post-setup.md  3-1-brain-session-and-seed-persistence.md  3-2-briefingaggregate-and-state-determination.md  3-3-briefingviewmodel-and-briefing-card-rendering.md  3-4-t1-command-grammar-and-deterministic-parser.md  3-5-nerve-command-routing-and-session-lifecycle.md  3-6-mode-restore-and-app-launching.md  3-7-shutdown-flow-and-seed-capture.md  deferred-work.md  epic-1-retro-2026-04-15.md  epic-2-retro-2026-04-18.md  epic-3-story-preflags.md  sprint-status.yaml
_bmad-output/planning-artifacts/: architecture.md  epics.md  implementation-readiness-report-2026-04-14.md  prd.md  product-brief-nova-distillate.md  product-brief-nova.md  ux-design-specification.md
_bmad-output/planning-artifacts/research/: domain-local-first-personal-ai-agents-research-2026-04-13.md  market-nova-desktop-ai-assistant-research-2026-04-13.md  technical-local-first-windows-ai-assistant-stack-research-2026-04-13.md
config/: exclusions.yaml  settings.defaults.yaml
config/modes/: coding.yaml
docs/: config-schemas.md  cross-cutting-patterns.md  development.md
src/nova/: __init__.py  app.py  cli.py
src/nova/adapters/: __init__.py
src/nova/adapters/claude/: __init__.py
src/nova/adapters/rich/: __init__.py  skin.py
src/nova/adapters/shield/: __init__.py  noop.py
src/nova/adapters/sqlite/: __init__.py  brain.py
src/nova/adapters/win32/: __init__.py  actions.py
src/nova/core/: __init__.py  audit.py  config.py  events.py  exceptions.py  formatting.py  paths.py  tiers.py  types.py
src/nova/core/storage/: __init__.py  engine.py
src/nova/ports/: __init__.py  app_launcher.py  brain.py  eyes.py  hands.py  nerve.py  ritual.py  shield.py  skin.py  voice.py
src/nova/setup/: __init__.py  __main__.py  api_key.py  completion.py  initial_capture.py  mode_wizard.py  settings_writer.py
src/nova/systems/: __init__.py
src/nova/systems/brain/: __init__.py  models.py
src/nova/systems/eyes/: __init__.py  models.py
src/nova/systems/hands/: __init__.py  models.py  system.py
src/nova/systems/nerve/: __init__.py  briefing.py  models.py  system.py
src/nova/systems/ritual/: __init__.py  models.py  system.py
src/nova/systems/shield/: __init__.py
src/nova/systems/skin/: __init__.py  commands.py  models.py
src/nova/systems/voice/: __init__.py
tests/: conftest.py
tests/integration/: test_api_key_update.py  test_cli_bootstrap.py  test_migrations_integration.py  test_session_loop.py  test_setup_bat.py  test_setup_wizard.py
tests/unit/: test_api_key_log_opacity.py  test_app.py  test_briefing_state_a_parity.py  test_ci_workflow.py  test_cli.py  test_cli_no_new_subcommands.py  test_cli_offline_notice.py  test_composition_root.py  test_composition_smoke.py  test_scaffold.py  test_setup_main.py
tests/unit/adapters/: test_noop_shield_adapter.py
tests/unit/adapters/win32/: test_actions.py  (+1 more)
tests/unit/core/: test_audit.py  test_config.py  test_core_isolation.py  test_events.py  test_exceptions.py  test_formatting.py  test_migration_runner.py  test_paths.py  test_storage_engine.py  test_tiers.py  test_types.py
tests/unit/docs/: test_readme.py
tests/unit/ports/: test_port_isolation.py
tests/unit/setup/: test_api_key_flow.py  test_api_key_validation.py  test_completion.py  test_initial_capture.py  test_initial_capture_isolation.py  test_initial_capture_persistence.py  test_mode_wizard_flow.py  test_mode_wizard_isolation.py  test_mode_wizard_registry.py  test_mode_wizard_slugify.py  test_mode_wizard_writers.py  test_no_key_interpolation.py  test_settings_writer.py  test_setup_does_not_import_ritual_internals.py  test_setup_main_state_a.py
(+26 files in other folders)
