[project]
name = "nova"
version = "0.1.0"
description = "N.O.V.A. - local-first Windows workspace assistant (modular monolith)."
authors = [{ name = "Sayuj" }]
requires-python = ">=3.12,<3.13"
dependencies = [
    "rich>=13",
    "pywin32>=306 ; sys_platform == 'win32'",
    "psutil>=5.9",
    "anthropic>=0.94,<1",
    "pyyaml>=6.0",
]

[project.scripts]
nova = "nova.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5",
    "ruff>=0.5",
    "mypy>=1.10",
    "types-pyyaml>=6.0",
    "types-psutil>=5.9",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/nova"]

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "T20"]

[tool.mypy]
strict = true
python_version = "3.12"
mypy_path = "src"
explicit_package_bases = true
files = ["src/nova", "tests"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = ["--strict-markers"]
markers = [
    "unit: unit tests - isolated, no external dependencies",
    "integration: integration tests - real SQLite, mock external services",
    "e2e: end-to-end tests through the continuity loop",
    "windows_only: tests that require Windows APIs",
    "migration: schema migration tests",
]
