[project]
name = "nova"
version = "0.1.0"
description = "N.O.V.A. - local-first Windows workspace assistant (modular monolith)."
authors = [{ name = "Sayuj" }]
requires-python = ">=3.12,<3.13"
dependencies = [
    "rich>=13",
    "pywin32>=306 ; sys_platform == 'win32'",
    "psutil>=5.9",
    "anthropic>=0.94,<1",
    "pyyaml>=6.0",
]

[project.scripts]
nova = "nova.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5",
    "ruff>=0.5",
    "mypy>=1.10",
    "types-pyyaml>=6.0",
    "types-psutil>=5.9",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/nova"]

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "T20"]

[tool.mypy]
strict = true
python_version = "3.12"
mypy_path = "src"
explicit_package_bases = true
files = ["src/nova", "tests"]

# pywin32 ships no type stubs (types-pywin32 exists but is partial and
# third-party). Story 2.4's ``nova.setup.initial_capture`` imports
# ``win32gui`` / ``win32process`` directly inside a guarded ``try/except
# ImportError`` block; the adapter types never cross the setup-module
# boundary (domain types ``WindowContext`` / ``WorkspaceSnapshot`` are
# the only outputs). Per project-context.md:122 ("Limited exclusions
# only for third-party integration boundaries ... documented explicitly
# in pyproject.toml"), suppress the import-untyped noise here rather
# than scatter ``# type: ignore[import-untyped]`` through every call
# site. Epic 4 (Story 4.1's ``Win32EyesAdapter``) inherits this override.
[[tool.mypy.overrides]]
module = ["win32gui", "win32process", "pywintypes"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
# `brittle` tests are deselected by default ŌĆö opt in with `-m brittle` or
# the deselect can be lifted via `--no-skip-brittle` (see tests/conftest.py).
# Ships with Story 3.3 to gate the ANSI byte-stream parity test that drifts
# under Rich version upgrades; never silence a failure by removing the
# marker ŌĆö investigate, decide whether to update the snapshot or fix the
# renderer.
addopts = ["--strict-markers", "-m", "not brittle"]
markers = [
    "unit: unit tests - isolated, no external dependencies",
    "integration: integration tests - real SQLite, mock external services",
    "e2e: end-to-end tests through the continuity loop",
    "windows_only: tests that require Windows APIs",
    "migration: schema migration tests",
    "brittle: tests that lock implementation details (e.g. Rich ANSI byte streams) and may flake on dependency upgrades ŌĆö deselected by default, run with `-m brittle` after a Rich/terminal-stack change",
]

[tool.coverage.run]
source = ["src/nova"]
branch = true
parallel = false

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "\\.\\.\\.",
]
precision = 1
show_missing = true
skip_covered = false
